kube/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: glaa-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glaa-web
    spec:  
      containers:
      - name: glaa-web
        securityContext:
          runAsNonRoot: true
        image: quay.io/ukhomeofficedigital/glaa-web:v0_1
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
        volumeMounts:
          - name: secrets
            mountPath: /home/app/glaa-web/secrets/
            readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings
          items:
          - key: appsettings.secrets.json
            path: appsettings.secrets.json
