kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: glaa-web-service
  name: glaa-web-service
spec:
  ports:
  - name: exposed-port
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: glaa-web
