kube/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: glaa-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: dev.glaa-dev.notprod.acp.homeoffice.gov.uk
    http:
      paths:
      - backend:
          serviceName: glaa-web-service
          servicePort: 5000
        path: /
