kube/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: glaa-web-ingress-network-policy
  namespace: glaa-dev
spec:
  podSelector:
    matchLabels:
      {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-internal
      ports:
        - protocol: TCP
          port: 80
